--- a/ReadWriteDiscuss/src/main/resources/application.properties
+++ b/ReadWriteDiscuss/src/main/resources/application.properties
@@ -11,3 +11,10 @@ spring.datasource.username=system
 spring.datasource.password=1234
 
 mybatis.mapper-locations=classpath:mybatis/mapper/**/**.xml
+
+# 파일업로드
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.location=E:\\upload
+spring.servlet.multipart.max-request-size=30MB
+spring.servlet.multipart.max-file-size=10MB
+
