--- a/ReadWriteDiscuss/src/main/resources/application.properties
+++ b/ReadWriteDiscuss/src/main/resources/application.properties
@@ -14,7 +14,6 @@ mybatis.mapper-locations=classpath:mybatis/mapper/**/**.xml
 
 # 파일업로드
 spring.servlet.multipart.enabled=true
-spring.servlet.multipart.location=E:\\upload
+spring.servlet.multipart.location=E:/upload
 spring.servlet.multipart.max-request-size=30MB
 spring.servlet.multipart.max-file-size=10MB
-
